# notion-names-and-faces

./: .gitignore  flake.nix  index.css  index.js  names-and-faces.cabal  shell.nix
app/: Json.hs  Main.hs  Parse.hs
nginx/: nginx.conf
